# TEEfecta

./: .env.example  .env.sample  .gitignore  CONTRIBUTING-PYTHON.md  CONTRIBUTING-TYPESCRIPT.md  CONTRIBUTING.md  README.md  WISHLIST.md  azure.yaml  backend-submission.md  check-transaction.js  deploy-and-monitor.sh  export-wallet.js  fix-deployment.sh  get-address.js  monitor-deployment.sh  monitor-job.sh  next-steps.md  package-lock.json  package.json  plan.md  simple-status.js  slides.tsx  test-wallet.js  test-wallet.mjs  tx-check.js  tx-status.mjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: format.yml  lint.yml  publish_docs.yml  publish_nightly.yml  publish_npm_manual.yml  publish_pypi_coinbase_agentkit.yml  publish_pypi_coinbase_agentkit_langchain.yml  publish_pypi_coinbase_agentkit_openai_agents_sdk.yml  publish_pypi_create_onchain_agent.yml  unit_tests.yml  version_publish_npm.yml
infra/: main.bicep  main.parameters.json  resources.bicep
python-backend/: README.md
python-backend/coinbase-agentkit/: README.md  pyproject.toml
python-backend/coinbase-agentkit/coinbase_agentkit/: __init__.py
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/: __init__.py
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/allora/: README.md
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/cdp/: cdp_api_action_provider.py
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/erc20/: README.md  erc20_action_provider.py
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/erc721/: README.md
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/hyperboliclabs/: README.md
python-backend/coinbase-agentkit/coinbase_agentkit/action_providers/pyth/: README.md
python-backend/coinbase-agentkit/coinbase_agentkit/wallet_providers/: __init__.py  evm_wallet_provider.py
python-backend/coinbase-agentkit/scripts/generate_action_provider/: README.md  constants.py  prompts.py  types.py  utils.py
python-backend/coinbase-agentkit/scripts/generate_action_provider/templates/: README.md.template  __init__.py.template  conftest.py.template  test_example_action.py.template
python-backend/coinbase-agentkit/tests/action_providers/allora/: test_allora_action_provider.py  test_allora_integration.py
python-backend/coinbase-agentkit/tests/action_providers/cdp/: test_cdp_api_action_provider.py
python-backend/create-onchain-agent/: Makefile
python-backend/create-onchain-agent/create_onchain_agent/: cli.py
python-backend/examples/langchain-cdp-chatbot/: pyproject.toml
python-backend/examples/langchain-eth-account-chatbot/: pyproject.toml
python-backend/examples/langchain-smart-wallet-chatbot/: pyproject.toml
python-backend/examples/langchain-twitter-chatbot/: Makefile  chatbot.py
python-backend/examples/openai-agents-sdk-cdp-chatbot/: chatbot.py
python-backend/framework-extensions/langchain/: Makefile  pyproject.toml
python-backend/framework-extensions/openai-agents-sdk/: Makefile  README.md
python-backend/scripts/: version.py
python/coinbase-agentkit/: CHANGELOG.md  Makefile
python/coinbase-agentkit/docs/: conf.py
python/coinbase-agentkit/scripts/: check_description_length.py
python/create-onchain-agent/: CHANGELOG.md  pyproject.toml
python/create-onchain-agent/templates/beginner/: README.md.jinja  chatbot.py.jinja  prepare_agentkit.py  wallet.py
python/create-onchain-agent/templates/chatbot/: prepare_agentkit.py.jinja
python/examples/langchain-cdp-chatbot/: chatbot.py
python/examples/langchain-eth-account-chatbot/: chatbot.py
python/examples/langchain-smart-wallet-chatbot/: README.md  chatbot.py
python/examples/langchain-twitter-chatbot/: pyproject.toml
python/examples/openai-agents-sdk-cdp-chatbot/: README.md  pyproject.toml
python/framework-extensions/langchain/: CHANGELOG.md
python/framework-extensions/openai-agents-sdk/: CHANGELOG.md  pyproject.toml
python/framework-extensions/openai-agents-sdk/coinbase_agentkit_openai_agents_sdk/: openai_agents_sdk_tools.py
python/framework-extensions/openai-agents-sdk/tests/openai_agents_sdk_tools/: test_get_openai_agents_sdk_tools.py
python/scripts/: README.md  version.sh
src/: index.js
src/backend/marlin/: README.md  build-cvm.sh  index.js  package-lock.json  package.json  run-integration-tests.sh
src/frontend/: ApiClient.ts  App.tsx  README.md  SUMMARY.md  cypress.config.js  index.html  index.tsx  package-lock.json  package.json  test-alignment.js  test-socket-client.js  test-websocket.js  tsconfig.json  vercel.json
src/frontend/components/: AgentTerminals.tsx  AttestationTerminal.tsx  DashboardLayout.tsx  MarlinConnectConfig.tsx  MockSocketProvider.tsx  RecallMemoryViewer.tsx  TradingInterface.tsx  WebSocketProvider.tsx
src/frontend/services/: ApiClient.ts
typescript/: package-lock.json  package.json
typescript-agenkit/.changeset/: config.json
typescript-agenkit/agentkit/: package-lock.json
typescript-agenkit/create-onchain-agent/: CHANGELOG.md  package-lock.json  package.json
typescript-agenkit/create-onchain-agent/src/: cli.ts  constants.ts
typescript-agenkit/examples/langchain-farcaster-chatbot/: package.json
typescript-agenkit/examples/langchain-privy-chatbot/: .env-local  README.md  chatbot.ts  package-lock.json
typescript-agenkit/examples/langchain-smart-wallet-chatbot/: README.md  chatbot.ts  package-lock.json  package.json
typescript-agenkit/examples/langchain-solana-chatbot/: .env-local  package-lock.json  package.json
typescript-agenkit/examples/langchain-twitter-chatbot/: chatbot.ts  package.json
typescript-agenkit/examples/model-context-protocol-cdp-server/: claude_desktop_config.json  package.json
typescript-agenkit/examples/vercel-ai-sdk-cdp-chatbot/: .env-local  README.md  chatbot.ts  (+1 more)
typescript/.changeset/: dirty-candies-thank.md  fuzzy-birds-beg.md
typescript/agentkit/: CHANGELOG.md  README.md  package.json  tsconfig.json
typescript/create-onchain-agent/: README.md
utils/: env.js  env.py
(+329 files in other folders)
