[tool.poetry]
name = "create-onchain-agent"
version = "0.3.0"
description = "CLI to create an onchain agent project"
authors = ["Carson Roscoe <carsonroscoe7@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["coinbase", "sdk", "crypto", "cdp", "agentkit", "ai", "agent"]
packages = [{ include = "create_onchain_agent" }]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
copier = "^9.1.0"
rich = "^13.3.2"
questionary = "^2.1.0"
requests = "^2.32.3"
platformdirs = "^4.3.6"
prompt-toolkit = "^3.0.50"

[tool.poetry.group.dev.dependencies]
towncrier = "^24.8.0"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-onchain-agent = "create_onchain_agent.cli:create_project"

[tool.towncrier]
package = "create_onchain_agent"
filename = "CHANGELOG.md"
directory = "changelog.d/"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/coinbase/agentkit/pull/{issue})"

[tool.towncrier.fragment.feature]
name = "Added"

[tool.towncrier.fragment.bugfix]
name = "Fixed"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["coinbase_agentkit, cdp"]
